--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "secure-pin",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "A cryptographically secure pin code generator",
   "main": "index.js",
   "typings": "index.ts",
   "scripts": {
-    "test": "test.js"
+    "test": "mocha test.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/ozouai/node-secure-pin/issues"
   },
-  "homepage": "https://github.com/ozouai/node-secure-pin#readme"
+  "homepage": "https://github.com/ozouai/node-secure-pin#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0"
+  }
 }
