--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
   - "7"
+install:
+  - npm install -g codecov istanbul
+script:
+  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
+  - codecov
 deploy:
   provider: npm
   email: $NPM_EMAIL
